...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".post.presentation.PostFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/frg_post__toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="Главная" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/frg_post__finish_post"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="end|center_horizontal"
            android:background="?selectableItemBackground"
            android:src="@drawable/ic_confirm_24" />

...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/frg_post__et_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start|top"
                android:hint="Введите текст..."
                android:inputType="textMultiLine|textCapSentences|textLongMessage"
...
