...
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/frg_login__mb_action_button"
                android:gravity="center"
                android:orientation="vertical">

                <include layout="@layout/layout_auth_login" />

                <include layout="@layout/layout_auth_signin" />
...
